1999-11-21  Nick Clifton  <nickc@cygnus.com>

	* invoke.texi (ARM Options): Replace -mshort-load-bytes with
	-malignment-traps. 
	(arm.h): Replace -mshort-load-bytes with -malignment-traps.
	(arm.c): Replace TARGET_SHORT_BY_BYTES with TARGET_MMU_TRAPS.
	(arm.md): Replace TARGET_SHORT_BY_BYTES with TARGET_MMU_TRAPS.

Fri Nov 12 13:28:58 1999  Bernd Schmidt  <bernds@cygnus.co.uk>

	* config/arm/arm.h (ARM_LEGITIMIZE_RELOAD_ADDRESS): Treat QImode
	addresses the same way GO_IF_LEGITIMATE_INDEX does. 

Wed Nov  3 10:04:07 1999  Nick Clifton  <nickc@cygnus.com>

	* config/arm/semi.h (TARGET_VERSION): Do not define if already
	defined.
	(TARGET_DEFAULT): Do not define if already defined.

Tue Nov  2 10:37:25 1999  Nick Clifton  <nickc@cygnus.com>

	* config/arm/arm.md (anddi3): Allow disjoint source operands.
	(iordi3): Allow disjoint source operands.
	(xordi3): Allow disjoint source operands.
	(negdi2): Permit construction for ARM and Thumb.
	(arm_negdi2): Renamed version of old negdi2 pattern.
	(thumb_negdi2): New pattern: Only permit non-overlapping
	source and destination.

Mon Nov  1 14:21:00 1999  Nick Clifton  <nickc@cygnus.com>

	* config/arm/arm.c (thumb_expand_prologue): Add comments
	explaining what is going on in this function.

Fri Oct 29 18:52:38 1999  Nick Clifton  <nickc@cygnus.com>

	* config/arm/arm.c (thumb_expand_prologue): Emit a USE of the
	scratch low register so that it will not be deleted.

Fri Oct 29 15:23:48 1999  Nick Clifton  <nickc@cygnus.com>

	* config/arm/pe.h (ARM_PE): Define.
	
	* config/arm/arm.c (arm_valid_machine_decl_attribute): Allow
	interfacearm attribute if this is a PE toolchain.
	(output_return_instruction): Do not emit anything if the function
	has the naked attribute set.
	(is_called_in_ARM_mode): If the function has the interfacearm
	attribute then return true.
	(thumb_expand_prologue): Do not generate a prologue for naked
	functions.
	(thumb_expand_epilogue): Do not generate an epilogie for a naked
	function.